Added OpenCV (commented out) in case needed uncomment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,12 @@ add_executable(post_process post_process.cpp)
 
 # Specify the include directories if needed
 # include_directories(/path/to/include)
+# find_package( OpenCV REQUIRED )
+# include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 # Specify the library directories
 link_directories(/home/pi/Download/fftw-3.3.10)
 
 # Link against the required libraries
+# target_link_libraries(post_process PRIVATE ${OpenCV_LIBS} stdc++ m fftw3)
 target_link_libraries(post_process PRIVATE stdc++ m fftw3)
