Created process.cpp which finishes processing the pre-processed signal and outputs necessary features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 project(professor_x)
 
 # Add the source file(s) to your project
-add_executable(post_process post_process.cpp)
+add_executable(process process.cpp)
 
 # Specify the include directories if needed
 # include_directories(/path/to/include)
@@ -14,4 +14,4 @@ link_directories(/home/pi/Download/fftw-3.3.10)
 
 # Link against the required libraries
 # target_link_libraries(post_process PRIVATE ${OpenCV_LIBS} stdc++ m fftw3)
-target_link_libraries(post_process PRIVATE stdc++ m fftw3)
+target_link_libraries(process PRIVATE stdc++ m fftw3)
