Split everything in separate functions for cleaner code and easier readability

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,19 @@
 cmake_minimum_required(VERSION 3.0)
 project(professor_x)
 
+# Set C++ standard and compiler flags
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+
 # Add the source file(s) to your project
-#add_executable(post_process post_process.cpp)
-#add_executable(process process.cpp)
-add_executable(simulate_live_data simulate_live_data.cpp)
+add_executable(simulate_live_data simulate_live_data.cpp statistical_features.cpp fftw.cpp fftw_relative_powers.cpp shannon_entropy.cpp zero_crossing_rate.cpp hjorth_parameters.cpp stft_relative_powers.cpp features_analysis.cpp)
 
 # Specify the include directories if needed
-# include_directories(/path/to/include)
-# find_package( OpenCV REQUIRED )
-# include_directories( ${OpenCV_INCLUDE_DIRS} )
+target_include_directories(simulate_live_data PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(simulate_live_data PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Specify the library directories
 link_directories(/home/pi/Download/fftw-3.3.10)
 
 # Link against the required libraries
-# target_link_libraries(post_process PRIVATE ${OpenCV_LIBS} stdc++ m fftw3)
-#target_link_libraries(process PRIVATE stdc++ m fftw3)
 target_link_libraries(simulate_live_data PRIVATE stdc++ m fftw3)
