Added higher order statistics - bispectrum relative pwoers and third moment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 # Add the source file(s) to your project
-add_executable(simulate_live_data simulate_live_data.cpp statistical_features.cpp fftw.cpp fftw_relative_powers.cpp shannon_entropy.cpp zero_crossing_rate.cpp hjorth_parameters.cpp stft_relative_powers.cpp features_analysis.cpp)
+add_executable(simulate_live_data simulate_live_data.cpp statistical_features.cpp fftw.cpp fftw_relative_powers.cpp shannon_entropy.cpp zero_crossing_rate.cpp hjorth_parameters.cpp stft_relative_powers.cpp higher_order_statistics.cpp features_analysis.cpp)
 
 # Specify the include directories if needed
 target_include_directories(simulate_live_data PRIVATE ${CMAKE_SOURCE_DIR}/include)
