--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ Makefile
 # Ignoring any .edf dataset used in Fall semester
 *.edf
 # Ignoring compiled code
+build
 post_process
 process
 simulate_live_data
