Trying to make executable to compile to choose with default simulate_udp_live_data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,18 @@ project(professor_x)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
+# Add a variable for the executable name
+set(EXECUTABLE_NAME "simulate_udp_live_data" CACHE STRING "Name of the executable")
+
 # Add the source file(s) to your project
-add_executable(simulate_udp_live_data simulate_udp_live_data.cpp statistical_features.cpp fftw.cpp fftw_relative_powers.cpp shannon_entropy.cpp zero_crossing_rate.cpp hjorth_parameters.cpp stft_relative_powers.cpp higher_order_statistics.cpp features_analysis.cpp)
+add_executable(${EXECUTABLE_NAME} ${EXECUTABLE_NAME}.cpp statistical_features.cpp fftw.cpp fftw_relative_powers.cpp shannon_entropy.cpp zero_crossing_rate.cpp hjorth_parameters.cpp stft_relative_powers.cpp higher_order_statistics.cpp features_analysis.cpp)
 
 # Specify the include directories if needed
-target_include_directories(simulate_udp_live_data PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(simulate_udp_live_data PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(${EXECUTABLE_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(${EXECUTABLE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Specify the library directories -- Set this up properly
 link_directories(/home/pi/Download/fftw-3.3.10)
 
 # Link against the required libraries
-target_link_libraries(simulate_udp_live_data PRIVATE stdc++ m fftw3)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE stdc++ m fftw3)
